src/tests/routes/me/snapshots/crates_io__tests__routes__me__get__me-3.snap
---
source: src/tests/routes/me/get.rs
expression: response.json()
snapshot_kind: text
---
{
  "owned_crates": [
    {
      "email_notifications": true,
      "id": 1,
      "name": "foo_my_packages"
    }
  ],
  "user": {
    "avatar": null,
    "email": "foo@example.com",
    "email_verification_sent": true,
    "email_verified": true,
    "id": 1,
    "is_admin": false,
    "login": "foo",
    "name": null,
    "publish_notifications": true,
    "url": "https://github.com/foo",
    "username": "foo"
  }
}
